# polling_app

./: .coverage  .gitignore  README.md  client.py  lint.sh  pyproject.toml  requirements.txt  run.sh  test.sh
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
polling_app/: constants.py  crud.py  database.py  main.py  models.py  schemas.py
polling_app/routers/: __init__.py  admin.py  polls.py  voting.py  websockets.py
polling_app/utils/: connection_manager.py  ws_helpers.py
tests/: assertion_helper.py  base.py  conftest.py  helper.py  test_poll_delete_cascade.py  test_polling.py  test_websocket.py  test_websocket_single_poll.py
